<resources>
    <string name="app_name">Trabalho Android</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="text_welcome">Escolha uma opção para executar uma Intent!</string>
    <string name="text_hint_edTextBrowser">Digite uma URL válida!</string>
    <string name="text_hint_edTextCall">Digite um número válido!</string>
    <string name="btn_browser">Browser</string>
    <string name="btn_call">Ligação</string>
    <string name="btn_camera">Camera</string>
</resources>
